start network flow section of appendix. replace messages during build with TODO:, fix technical mistake: create the system -> write the system as an augmented matrix. make matrix brackets inline-block to override mathjax wrapping behavior that is explicitly set in master.js. e.g. try to prevent matrix brackets from wrapping.

--- a/client/styles/hard_coded_dimensions.css
+++ b/client/styles/hard_coded_dimensions.css
@@ -108,3 +108,7 @@
 .full-width {
     width: 100%;
 }
+
+.min-width-350 {
+    min-width: 350px;
+}
